# i-DQN

./: .gitignore  Dockerfile  README.md  flops_count.ipynb  setup.cfg  setup_aws.sh
experiments/: __init__.py
experiments/atari/: DQN.py  IQN.py  REM.py  __init__.py  evaluate.py  iDQN.py  iDQN_evaluate.py  iIQN.py  iREM.py  idqn.py  legends.ipynb  parameters.json  plots.ipynb  plots_aggregates.ipynb  plots_loss.ipynb  utils.py
experiments/atari/baselines_scores/: add_dopamine_score_to_baselines.ipynb
experiments/base/: DQN.py  FQI.py  FQI_bound.py  FQI_linear.py  FQI_theoretical_analysis.py  fg_idqn.py  fgidqn.py  iDQN.py  iFQI.py  idqn.py  parser.py  parser_argument.py  print.py  shared_idqn.py  utils.py
experiments/car_on_hill/: __init__.py  create_features.ipynb  iFQI.py  iFQI_bound.py  iFQI_evaluate.py  iFQI_linear.py  iFQI_linear_closed_form.py  iFQI_linear_closed_from.ipynb  optimal.py  parameters.json  plot_bound.ipynb  plot_linear.ipynb  plot_samples.ipynb  plots.ipynb  plots_loss.ipynb  sample.py  study_condition.py  tries.ipynb  utils.py  verify_one_iteration.py
experiments/lqr/: plots.ipynb  plots_adqn.ipynb
experiments/lunar_lander/: dqn.py  fg_idqn.py  fgidqn.py  iDQN.py  iDQN_evaluate.py  idqn.py  parameters.json  plots.ipynb  plots_loss.ipynb  shared_idqn.py  utils.py
idqn/environments/: atari.py  car_on_hill.py  lqr.py  lunar_lander.py  viewer.py
idqn/networks/: base.py  base_q.py  dqn.py  dqn_q.py  idqn.py  idqn_q.py  iiqn.py  iiqn_q.py  iqn.py  iqn_q.py  irem.py  learnable_multi_head_q.py  learnable_q.py  q_architectures.py  rem.py  rem_q.py
idqn/networks/architectures/: base.py  dqn.py  idqn.py  ifqi.py  iiqn.py  iqn.py  irem.py  rem.py
idqn/sample_collection/: __init__.py  dataloader.py  exploration.py  replay_buffer.py
idqn/utils/: baselines_scores.py  dopamine_scores.py  head_behaviorial_policy.py  importance_iteration.py  params.py  pickle.py  plots.py  process_scores.py  two_dimensions_mesh.py
launch_job/: benchmark_time.sh  docker_launcher.sh  parallel_launcher.py  parse_arguments.sh
launch_job/atari/: evaluate_idqn.sh  launch.sh  launch_dqn.sh  launch_gpu.sh  launch_gpu_dqn.sh  launch_gpu_idqn.sh  launch_idqn.sh  launch_iiqn.sh  launch_iqn.sh  launch_irem.sh  launch_local.sh  launch_local_dqn.sh  launch_local_idqn.sh  launch_local_iiqn.sh  launch_local_iqn.sh  launch_local_irem.sh  launch_local_rem.sh  launch_rem.sh  local_idqn.sh  train_dqn.sh  train_idqn.sh  train_iiqn.sh  train_iqn.sh  train_irem.sh  train_rem.sh
launch_job/car_on_hill/: evaluate_ifqi.sh  launch.sh  launch_gpu.sh  launch_ifqi.sh  launch_ifqi_bound.sh  launch_ifqi_linear.sh  launch_ifqi_linear_closed_form.sh  launch_local.sh  train_ifqi.sh  train_ifqi_bound.sh  train_ifqi_linear.sh  train_ifqi_linear_closed_form.sh
launch_job/lunar_lander/: cluster_dqn.sh  cluster_idqn.sh  evaluate_idqn.sh  launch.sh  launch_gpu.sh  launch_local.sh  local_fgidqn.sh  local_idqn.sh  local_shared_idqn.sh  train_idqn.sh
slim_idqn/networks/: dqn.py  fg_idqn.py  fgidqn.py  idqn.py  shared_idqn.py
slim_idqn/networks/architectures/: shared_layer_DQN.py
slim_idqn/sample_collection/: replay_buffer.py  samplers.py  utils.py
slimdqn/networks/: idqn.py
slimdqn/networks/architectures/: dqn.py
test/environments/: test_atari.py
test/networks/: test_learnable_multi_head_q.py  test_q_architectures.py
test/sample_collection/: test_replay_buffer.py
tests/environments/: test_atari.py  time_atari.py
tests/networks/: test_atari_architectures.py  test_atari_architectures_dqn.py  test_atari_architectures_idqn.py  test_atari_architectures_iiqn.py  test_atari_architectures_iqn.py  test_atari_architectures_irem.py  test_atari_architectures_rem.py  time_atari_architectures.py  utils.py
tests/pipeline/: parameters.json  parameters_time.json  test_algorithms.py  test_atari.py  time_atari.py
tests/sample_collection/: test_replay_buffer.py  time_replay_buffer.py
