[metadata]
name = idqn
version = 0.1
description = iterated Deep-Q Network (iDQN). Learning several iterations of the Bellman operator yields better performances.
license = MIT
requires = 
    setuptools(==44.0.0)
    wheel(==0.38.4)

[options]
packages = idqn, experiments, launch_job, tests
python_requires = >= 3.7
install_requires =
    absl-py==1.4.0
    ale-py==0.7.5
    arch==6.2.0
    asttokens==2.2.1
    AutoROM==0.4.2
    AutoROM.accept-rom-license==0.6.1
    backcall==0.2.0
    cached-property==1.5.2
    certifi==2023.5.7
    charset-normalizer==3.1.0
    chex==0.1.8
    click==8.1.3
    cloudpickle==2.2.1
    comm==0.1.3
    contourpy==1.1.0
    cycler==0.11.0
    debugpy==1.6.7
    decorator==5.1.1
    dm-tree==0.1.8
    etils==1.3.0
    exceptiongroup==1.1.3
    executing==1.2.0
    flax==0.6.11
    fonttools==4.40.0
    fsspec==2023.9.2
    gym==0.25.2
    gym-notices==0.0.8
    idna==3.4
    importlib-resources==5.12.0
    iniconfig==2.0.0
    ipykernel==6.25.0
    ipython==8.14.0
    jax==0.4.13
    jaxlib==0.4.13
    jedi==0.18.2
    jupyter_client==8.3.0
    jupyter_core==5.3.1
    kiwisolver==1.4.5
    markdown-it-py==3.0.0
    matplotlib==3.7.1
    matplotlib-inline==0.1.6
    mdurl==0.1.2
    ml-dtypes==0.2.0
    msgpack==1.0.5
    nest-asyncio==1.5.6
    numpy==1.23.5
    nvidia-cublas-cu12==12.2.5.6
    nvidia-cuda-cupti-cu12==12.2.142
    nvidia-cuda-nvcc-cu12==12.2.140
    nvidia-cuda-nvrtc-cu12==12.2.140
    nvidia-cuda-runtime-cu12==12.2.140
    nvidia-cudnn-cu12==8.9.4.25
    nvidia-cufft-cu12==11.0.8.103
    nvidia-cusolver-cu12==11.5.2.141
    nvidia-cusparse-cu12==12.1.2.141
    nvidia-nvjitlink-cu12==12.2.140
    opencv-python==4.7.0.72
    opt-einsum==3.3.0
    optax==0.1.5
    orbax-checkpoint==0.2.6
    packaging==23.1
    pandas==2.0.2
    parso==0.8.3
    patsy==0.5.3
    pexpect==4.8.0
    pickleshare==0.7.5
    Pillow==9.5.0
    platformdirs==3.9.1
    pluggy==1.3.0
    prompt-toolkit==3.0.38
    protobuf==4.23.3
    psutil==5.9.5
    ptyprocess==0.7.0
    pure-eval==0.2.2
    Pygments==2.15.1
    pyparsing==3.1.0
    pytest==7.4.0
    python-dateutil==2.8.2
    pytz==2023.3
    PyYAML==6.0
    pyzmq==25.1.0
    requests==2.31.0
    rich==13.4.2
    scipy==1.11.0
    six==1.16.0
    stack-data==0.6.2
    statsmodels==0.14.0
    tensorstore==0.1.39
    tomli==2.0.1
    toolz==0.12.0
    tornado==6.3.2
    tqdm==4.65.0
    traitlets==5.9.0
    typing_extensions==4.6.3
    tzdata==2023.3
    urllib3==1.26.16
    wcwidth==0.2.6
    zipp==3.17.0
    
[options.extras_require]
dev = 
    black

[options.entry_points]
console_scripts =
    parallel_launcher = launch_job.parallel_launcher:run_cli
    atari_dqn = experiments.atari.DQN:run_cli
    atari_iqn = experiments.atari.IQN:run_cli
    atari_rem = experiments.atari.REM:run_cli
    atari_idqn = experiments.atari.iDQN:run_cli
    atari_iiqn = experiments.atari.iIQN:run_cli
    atari_irem = experiments.atari.iREM:run_cli
    time_atari_env = tests.environments.time_atari:run_cli
    time_atari_architectures = tests.networks.time_atari_architectures:run_cli
    time_replay_buffer = tests.sample_collection.time_replay_buffer:run_cli
    time_pipeline = tests.pipeline.time_atari:run_cli